--- a/index.html
+++ b/index.html
@@ -3,15 +3,46 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Boolean Train</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="https:cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
-  
-  
-  <script src="main.js"></script>
+  <div class="col-4 m-auto mt-4">
+    <img style="width:100%;" src="img/logo.svg" alt="logo">
+  </div>
+  <div class="container my-5 bg-success m-auto">
+    <div class="row">
+      <h1 class="text-black text-center mt-3"><strong>Boolean Train Ticket</strong></h1>
+      <div class="col-8 m-auto my-5 bg-secondary">
+        <div class="row mb-5">
+          <div class="col-4"><strong>Chilometri selezionati:</strong></div>
+          <div class="col-1 bg-white height">
+            <strong><p class="text-center" id="km"></p></strong>
+          </div>
+          <div class="col-2"><strong>km</strong></div>
+        </div>
+        <div class="row mb-5">
+          <div class="col-4"><strong>Età selezionata:</strong></div>
+          <div class="col-1 bg-white height">
+            <strong><p class="text-center" id="age"></p></strong>
+          </div>
+          <div class="col-2"><strong>anni</strong></div>
+        </div>
+        <div class="row">
+          <div class="col-4"><strong>Prezzo:</strong></div>
+          <div class="col-1 bg-white height">
+            <strong><p class="text-center" id="your-price"></p></strong>
+          </div>
+          <div class="col-2"><strong>€</strong></div>
+          <div id="under-discount"></div>
+          <div id="over-discount"></div>
+        </div>       
+      </div>
+    </div>
+  </div>
+  <script src="js/main.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
 </body>
-</html>
+</html> 
